# ultrafast-mcp

./: .gitignore  API.md  AUTHENTICATION_INTEGRATION.md  CARGO_TOML_FIXES_SUMMARY.md  CHANGELOG.md  CODE_DUPLICATION_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  EXAMPLES.md  FEATURE_FLAGS_CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  LIFECYCLE_COMPLIANCE_IMPROVEMENTS.md  LIFECYCLE_IMPLEMENTATION_GAPS_ANALYSIS.md  MCP_COMPLIANCE_EXECUTION_PLAN.md  Makefile  README.md  REFACTORING_PLAN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_RC1.2.md  RELEASE_NOTES_RC1.3.md  RELEASE_NOTES_RC1.md  RELEASE_SUMMARY_v202506018.1.0.md  TODO_CLEANUP_SUMMARY.md  ULTRAFAST_MCP_PRD_LLM_FRIENDLY.md  mcp.json  notes  package-lock.json  package.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  docs-rs.yml  nightly.yml  pr.yml  pre-release.yml  release.yml
benches/: http_transport_benchmarks.rs  performance_benchmarks.rs
crates/ultrafast-mcp/: Cargo.toml
crates/ultrafast-mcp-auth/: Cargo.toml  README.md
crates/ultrafast-mcp-auth/src/: error.rs  lib.rs  middleware.rs  oauth.rs  pkce.rs  types.rs  validation.rs
crates/ultrafast-mcp-auth/tests/: auth_tests.rs
crates/ultrafast-mcp-cli/: Cargo.toml  README.md
crates/ultrafast-mcp-cli/src/: config.rs  main.rs  templates.rs  utils.rs
crates/ultrafast-mcp-cli/src/commands/: build.rs  client.rs  completions.rs  dev.rs  generate.rs  info.rs  init.rs  mod.rs  server.rs  test.rs  validate.rs
crates/ultrafast-mcp-client/: Cargo.toml  README.md
crates/ultrafast-mcp-client/src/: lib.rs
crates/ultrafast-mcp-core/: Cargo.toml  README.md
crates/ultrafast-mcp-core/src/: config.rs  error.rs  lib.rs
crates/ultrafast-mcp-core/src/config/: base.rs
crates/ultrafast-mcp-core/src/protocol/: capabilities.rs  constants.rs  jsonrpc.rs  lifecycle.rs  messages.rs  metadata.rs  mod.rs  version.rs
crates/ultrafast-mcp-core/src/schema/: generation.rs  mod.rs  validation.rs
crates/ultrafast-mcp-core/src/traits/: config.rs  handler.rs  mod.rs  validator.rs
crates/ultrafast-mcp-core/src/types/: client.rs  completion.rs  elicitation.rs  mod.rs  notifications.rs  prompts.rs  resources.rs  roots.rs  sampling.rs  server.rs  tools.rs
crates/ultrafast-mcp-core/src/utils/: cancellation.rs  identifiers.rs  mod.rs  pagination.rs  progress.rs  uri.rs
crates/ultrafast-mcp-core/src/validation/: mod.rs  protocol.rs  session.rs  timeout.rs
crates/ultrafast-mcp-core/tests/: integration_tests.rs
crates/ultrafast-mcp-macros/: Cargo.toml  README.md
crates/ultrafast-mcp-macros/src/: lib.rs
crates/ultrafast-mcp-monitoring/: Cargo.toml  README.md
crates/ultrafast-mcp-monitoring/src/: config.rs  exporters.rs  health.rs  lib.rs  metrics.rs  middleware.rs  tracing.rs
crates/ultrafast-mcp-server/: Cargo.toml  README.md
crates/ultrafast-mcp-server/src/: context.rs  handlers.rs  lib.rs  server.rs
crates/ultrafast-mcp-server/tests/: compliance_tests.rs  server_tests.rs
crates/ultrafast-mcp-test-utils/: Cargo.toml  README.md
crates/ultrafast-mcp-test-utils/src/: assertions.rs  fixtures.rs  lib.rs  mocks.rs
crates/ultrafast-mcp-transport/: Cargo.toml  README.md
crates/ultrafast-mcp-transport/src/: lib.rs  middleware.rs  stdio.rs
crates/ultrafast-mcp-transport/src/http/: client.rs  mod.rs  optimization.rs  pool.rs  rate_limit.rs  server.rs  session.rs  streamable.rs
crates/ultrafast-mcp-transport/src/streamable_http/: client.rs  middleware.rs  mod.rs  server.rs
crates/ultrafast-mcp-transport/tests/: http_optimization_tests.rs  transport_tests.rs
crates/ultrafast-mcp/src/: lib.rs  prelude.rs
docs/: README.md
docs/api-reference/: server-api.md
docs/compliance/: mcp-compliance.md
docs/core-concepts/: architecture.md
docs/features/: tools.md
docs/getting-started/: installation.md  quick-start.md
examples/: README.md
examples/01-basic-echo/: Cargo.toml  README.md  mcp-inspector-config.json
examples/01-basic-echo/src/: basic-echo-client.rs  basic-echo-demo.rs  basic-echo-server.rs  client.rs  server.rs  subprocess-demo.rs
examples/02-file-operations/: Cargo.toml  README.md  mcp-inspector-config.json  test_http.sh
examples/02-file-operations/src/: client.rs  server.rs
examples/03-everything-server/: Cargo.toml  README.md  mcp-inspector-config.json
examples/03-everything-server-streamable-http/: README.md
examples/03-everything-server/src/: client.rs  everything-server-client.rs  main.rs
examples/03-http-server/: Cargo.toml  README.md
examples/03-http-server/src/: client.rs  http_server.rs  server.rs
examples/04-advanced-features/: Cargo.toml  README.md
examples/04-advanced-features/src/: client.rs  server.rs
examples/04-authentication-example/: Cargo.toml  README.md
examples/04-authentication-example/src/: main.rs
examples/05-lifecycle-compliance/: Cargo.toml  README.md
examples/05-lifecycle-compliance/src/: main.rs
examples/everything-server-stdio/: Cargo.toml  README.md  mcp-inspector-config.json  test_server.py
examples/everything-server-stdio/src/: client.rs  main.rs
examples/everything-server-streamable-http/: Cargo.toml  README.md
examples/everything-server-streamable-http/src/: client.rs  main.rs
scripts/: README.md  bump-version.sh  version-check.sh
tests/: client_integration_tests.rs  http_integration_tests.rs  integration_tests.rs  mcp_compliance_tests.rs  test_ergonomic_api.rs
tests/integration-test-suite/: Cargo.toml
tests/integration-test-suite/src/: cancellation_tests.rs  client_integration_tests.rs  completion_tests.rs  http_integration_tests.rs  integration_tests.rs  lib.rs  main.rs  mcp_compliance_tests.rs  test_ergonomic_api.rs
