[workspace]
resolver = "2"
members = [
    "crates/ultrafast-mcp",
    "crates/ultrafast-mcp-core",
    "crates/ultrafast-mcp-transport",
    "crates/ultrafast-mcp-server",
    "crates/ultrafast-mcp-client",
    "crates/ultrafast-mcp-macros",
    "crates/ultrafast-mcp-cli",
    "crates/ultrafast-mcp-auth",
    "crates/ultrafast-mcp-monitoring",
    "examples/01-basic-echo",
    "examples/02-file-operations",
    "examples/03-http-server",
    "examples/04-advanced-features",
]

# Workspace-wide profile configurations
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "unwind"
codegen-units = 16
incremental = false

[profile.test]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256
incremental = true

[profile.bench]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "thin"
codegen-units = 16
incremental = false

[workspace.package]
version = "202506018.1.0-rc.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/techgopal/ultrafast-mcp"
homepage = "https://ultrafast-mcp.com"
documentation = "https://docs.rs/ultrafast-mcp"
authors = ["ULTRAFAST_MCP Team <team@ultrafast-mcp.com>"]
keywords = ["mcp", "protocol", "llm", "ai", "json-rpc"]
categories = ["api-bindings", "asynchronous", "network-programming"]
readme = "README.md"
description = "UltraFast MCP - High-performance Model Context Protocol implementation in Rust"

[workspace.dependencies]
# Core runtime dependencies
tokio = { version = "202506018.1.0-rc.1.3"] }
tokio-util = { version = "202506018.1.0-rc.1.3"] }
tokio-stream = "0.1"
serde = { version = "202506018.1.0-rc.1.3"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# HTTP transport
axum = "0.8"
reqwest = { version = "202506018.1.0-rc.1.3"] }
tower = "0.4"
tower-http = { version = "202506018.1.0-rc.1.3"] }
hyper = "1.6"
hyper-util = { version = "202506018.1.0-rc.1.3"] }

# Authentication
oauth2 = "5.0"
jsonwebtoken = "9.3"
base64 = "0.22"
url = "2.5"
rand = "0.9"
sha2 = "0.10"

# Procedural macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "202506018.1.0-rc.1.3"] }

# CLI dependencies
clap = { version = "202506018.1.0-rc.1.3"] }
clap_complete = "4.5"
console = "0.16"
indicatif = "0.17"
colored = "3.0"
dirs = "6.0"

# UUID generation  
uuid = { version = "202506018.1.0-rc.1.3"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "202506018.1.0-rc.1.3"] }

# Testing dependencies
criterion = { version = "202506018.1.0-rc.1.3"] }
tokio-test = "0.4"
tempfile = "3.20"

# JSON Schema
schemars = { version = "202506018.1.0-rc.1.3"] }

# Monitoring and observability
opentelemetry = "0.30"
opentelemetry_sdk = { version = "202506018.1.0-rc.1.3"] }
opentelemetry-jaeger = { version = "202506018.1.0-rc.1.3"] }
opentelemetry-prometheus = "0.29"
opentelemetry-otlp = { version = "202506018.1.0-rc.1.3"] }
tracing-opentelemetry = "0.31"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
sysinfo = "0.35"
chrono = { version = "202506018.1.0-rc.1.3"] }

# Configuration formats
toml = "0.8"
serde_yaml = "0.9"

# Text processing
regex = "1.10"

# Additional utilities
lazy_static = "1.4"
urlencoding = "2.1"
rand_distr = "0.5.1"
