[package]
name = "ultrafast-mcp-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Authentication and authorization for ULTRAFAST MCP"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Internal dependencies
ultrafast-mcp-core = { path = "../ultrafast-mcp-core", version = "=202506018.1.0-rc.2" }

# Core runtime dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# OAuth 2.1 dependencies
oauth2 = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

# HTTP client for token requests
reqwest = { workspace = true }

# Tracing and utilities
tracing = { workspace = true }
rand_distr = { workspace = true }

[features]
# No default features for minimal footprint
default = []

# Core authentication functionality
core = []

# OAuth 2.1 authentication support
oauth = []

# All authentication methods
full = ["core", "oauth"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
