[package]
name = "ultrafast-mcp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Command-line interface for ULTRAFAST MCP"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
# Internal dependencies
ultrafast-mcp = { path = "../ultrafast-mcp", version = "202506018.1.0-rc.1.6" }
ultrafast-mcp-core = { path = "../ultrafast-mcp-core", version = "202506018.1.0-rc.1.6" }
ultrafast-mcp-server = { path = "../ultrafast-mcp-server", version = "202506018.1.0-rc.1.6" }
ultrafast-mcp-client = { path = "../ultrafast-mcp-client", version = "202506018.1.0-rc.1.6" }
ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport", version = "202506018.1.0-rc.1.6" }
ultrafast-mcp-auth = { path = "../ultrafast-mcp-auth", version = "202506018.1.0-rc.1.6", optional = true }
ultrafast-mcp-monitoring = { path = "../ultrafast-mcp-monitoring", version = "202506018.1.0-rc.1.6", optional = true }

# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal UI
console = { workspace = true }
indicatif = { workspace = true }
colored = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client for testing
reqwest = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# System utilities
dirs = { workspace = true }

# Text processing
regex = { workspace = true }

[features]
default = []
auth = ["ultrafast-mcp-auth"]
monitoring = ["ultrafast-mcp-monitoring"]

[dev-dependencies]
tempfile = { workspace = true }
