[package]
name = "ultrafast-mcp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Command-line interface for ULTRAFAST MCP"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "mcp"
path = "src/main.rs"

[dependencies]
# Internal dependencies
ultrafast-mcp = { path = "../ultrafast-mcp" }
ultrafast-mcp-core = { path = "../ultrafast-mcp-core" }
ultrafast-mcp-server = { path = "../ultrafast-mcp-server" }
ultrafast-mcp-client = { path = "../ultrafast-mcp-client" }
ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport" }
ultrafast-mcp-auth = { path = "../ultrafast-mcp-auth", optional = true }
ultrafast-mcp-monitoring = { path = "../ultrafast-mcp-monitoring", optional = true }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }

# Terminal UI (optional)
console = { workspace = true, optional = true }

[features]
# No default features for minimal footprint
default = []

# Core CLI functionality
core = []

# Terminal UI
ui = ["console"]

# Logging support
logging = []

# Authentication support
auth = ["ultrafast-mcp-auth"]

# Monitoring support
monitoring = ["ultrafast-mcp-monitoring"]

# All features
full = ["core", "ui", "logging", "auth", "monitoring"]

[dev-dependencies]
tempfile = { workspace = true }
