[package]
name = "ultrafast-mcp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Client implementation for UltraFast MCP"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Internal dependencies
ultrafast-mcp-core = { path = "../ultrafast-mcp-core", version = "=202506018.1.0-rc.3" }
ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport", version = "=202506018.1.0-rc.3" }
ultrafast-mcp-auth = { path = "../ultrafast-mcp-auth", version = "=202506018.1.0-rc.3", optional = true }

# Core runtime dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[features]
# No default features for minimal footprint
default = []

# Core client functionality
core = []

# HTTP transport support
http = ["ultrafast-mcp-transport/http"]

# OAuth authentication support
oauth = ["ultrafast-mcp-auth"]

# HTTP with authentication
http-with-auth = ["http", "oauth"]

# All client features
full = ["core", "http", "oauth"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
