[package]
name = "ultrafast-mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Core protocol implementation for UltraFast MCP"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }
regex.workspace = true
lazy_static = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }

# Internal dependencies
# ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport" }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
