[package]
name = "ultrafast-mcp-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
description = "Procedural macros for the ULTRAFAST MCP implementation"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
# Procedural macro dependencies
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }
ultrafast-mcp-core = { path = "../ultrafast-mcp-core" }
ultrafast-mcp-server = { path = "../ultrafast-mcp-server" }
ultrafast-mcp-client = { path = "../ultrafast-mcp-client" }
serde = { workspace = true }
