[package]
name = "ultrafast-mcp-server"
version = "0.1.0"
edition = "2021"
description = "High-performance server implementation for the Model Context Protocol (MCP)"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ultrafast-mcp"
documentation = "https://docs.rs/ultrafast-mcp-server"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ultrafast-mcp-core = { path = "../ultrafast-mcp-core" }
ultrafast-mcp-transport = { path = "../ultrafast-mcp-transport" }
ultrafast-mcp-monitoring = { path = "../ultrafast-mcp-monitoring", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
monitoring = ["ultrafast-mcp-monitoring"]
http = ["ultrafast-mcp-transport/http"]
